<resources>
    <string name="app_name">MailTracker</string>
    <string name="open_Drawer">Drawer opened!</string>
    <string name="close_drawer">LecturerAvailability</string>
    <string name="register">Didn\'t have account yet ? click here to register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">CONFIRM</string>
    <string name="admin">Admin</string>
    <string name="mail_sender">Mail_Sender</string>
    <string name="mail_about">Mail_About</string>
    <string name="mail_receiver">Mail_Receiver</string>
    <string name="mail_receiver_address">mail_receiver_address</string>
    <string name="mail_received">Mail Received</string>
    <string name="date_template">10-Apr-2019</string>
    <string name="received_by_admin">Received by admin :</string>
    <string name="confirm_mail">CONFIRM MAIL</string>
    <string name="from">From :</string>
    <string name="received_by">Received by :</string>
    <string name="not_yet">NOT YET</string>
    <string name="history">History</string>
    <string name="there_are_no_new_mail">There are no new mail</string>
</resources>
