<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:background="#dcdde1"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/user_cv"
        android:layout_width="match_parent"
        android:layout_height="250dp"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:background="@drawable/dashed_border">
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/mail_sender_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_weight="0.1"
                android:text="@string/mail_sender"/>
            <TextView
                android:id="@+id/mail_about_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_weight="0.1"
                android:text="@string/mail_about"/>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1.8"
                android:visibility="invisible"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="7">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="4.5"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/mail_receiver_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_receiver"
                        android:layout_weight="5.5"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="4.5"
                        android:visibility="invisible"/>
                    <TextView
                        android:id="@+id/mail_receiver_address_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/mail_receiver_address"
                        android:layout_weight="5.5"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>